--- a/localization/russian/culture/new_cultures_l_russian.yml
+++ b/localization/russian/culture/new_cultures_l_russian.yml
@@ -230,7 +230,7 @@
 
  wendish:0 "Лехиты"
  wendish_prefix:0 "Лехито"
- wendish_collective_noun:0 "Лехитски"
+ wendish_collective_noun:0 "Лехитск"
 
  castran:0 "Галлеки" 
  castran_prefix:0 "Галлеко" 
