--- a/localization/russian/culture/cultural_maa_innovations_l_russian.yml
+++ b/localization/russian/culture/cultural_maa_innovations_l_russian.yml
@@ -21,7 +21,7 @@
  culture_parameter_unlock_maa_varangian_veterans:0 "Can recruit [GetMaA('varangian_veterans').GetName] as [men_at_arms|E]" #NT!
  culture_parameter_unlock_maa_longbowmen:0 "Can recruit [GetMaA('longbowmen').GetName] as [men_at_arms|E]" #NT!
  culture_parameter_unlock_maa_huscarls:0 "Can recruit [GetMaA('huscarl').GetName] as [men_at_arms|E]" #NT!
-
+ culture_parameter_unlock_maa_huanch_vaulter:0 "Can recruit [GetMaA('guanch_vaulter').GetName] as [men_at_arms|E]"
  # Early Medieval Era #NT!
  culture_parameter_unlock_maa_khandayat:0 "Can recruit [GetMaA('khandayat').GetName] as [men_at_arms|E]" #NT!
  culture_parameter_unlock_maa_garudas:0 "Can recruit [GetMaA('garudas').GetName] as [men_at_arms|E]" #NT!
